# moof

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  GEMINI.md  JOURNAL.md  NEXT_SESSION.md  PLAN-agent-vat.md  PLAN-design-alignment.md  PLAN-image-v3.md  PLAN-runtime-server.md  PLAN-server-process.md  PLAN-substrate.md  README.md  STDLIB-PLAN.md  VISION.md  moof  moof.toml
.cargo/: config.toml
.moof/: image.sha256  manifest.moof
.moof/modules/: bootstrap.moof  classes.moof  collections.moof  geometry.moof  json.moof  mcp.moof  membrane.moof  modules.moof  system.moof  workspace.moof
.moof/source/: Assoc.moof  Boolean.moof  Box.moof  Cons.moof  Counter.moof  Environment.moof  EventEmitter.moof  Facet.moof  Float.moof  Integer.moof  JSON.moof  Lambda.moof  LoggingMembrane.moof  Membrane.moof  Nil.moof  Object.moof  Operative.moof  Pair.moof  Point.moof  Queue.moof  Set.moof  Stack.moof  String.moof  Symbol.moof  _-.moof  and.moof  any_.moof  append.moof  apply.moof  assoc-equal_.moof  c.moof  caddr.moof  cadr.moof  cddr.moof  compose.moof  cond.moof  constantly.moof  define-handler.moof  defmethod.moof  display.moof  (+46 more)
crates/abi-rust/: Cargo.toml
crates/fabric/: Cargo.toml
crates/fabric/src/: dispatch.rs  lib.rs  store.rs  value.rs  vat.rs
crates/lang/: Cargo.toml
crates/moof-cap-clock/: Cargo.toml
crates/moof-cap-clock/src/: lib.rs
crates/moof-cap-console/: Cargo.toml
crates/moof-cap-console/src/: lib.rs
crates/moof-cap-eval/: Cargo.toml
crates/moof-cap-eval/src/: lib.rs
crates/moof-cap-file/: Cargo.toml
crates/moof-cap-file/src/: lib.rs
crates/moof-cap-random/: Cargo.toml
crates/moof-cap-random/src/: lib.rs
crates/moof-cap-system/: Cargo.toml
crates/moof-cap-system/src/: lib.rs
crates/moof-caps/: Cargo.toml
crates/moof-caps/src/: capabilities.rs  lib.rs
crates/moof-cli/: Cargo.toml
crates/moof-cli/src/: boot.rs  lib.rs  main.rs  scheduler.rs  store.rs  system.rs  vat.rs  vm.rs
crates/moof-cli/src/heap/: table.rs
crates/moof-cli/src/lang/: compiler.rs  lexer.rs
crates/moof-cli/src/plugins/: block.rs  json.rs  mod.rs  vec3.rs
crates/moof-cli/src/plugins/effects/: mod.rs
crates/moof-cli/src/shell/: eval.rs  mod.rs  notebook.rs  repl.rs  script.rs
crates/moof-core/: Cargo.toml
crates/moof-core/src/: arena.rs  canonical.rs  dispatch.rs  lib.rs  object.rs  plugin.rs  protos.rs  source.rs  symtab.rs  value.rs
crates/moof-core/src/heap/: bigint.rs  format.rs  gc.rs  image.rs  mod.rs
crates/moof-lang/: Cargo.toml
crates/moof-lang/src/: lib.rs  opcodes.rs  vm.rs
crates/moof-lang/src/jit/: mod.rs
crates/moof-lang/src/lang/: compiler.rs  lexer.rs  parser.rs
crates/moof-plugin-block/: Cargo.toml
crates/moof-plugin-collections/: Cargo.toml
crates/moof-plugin-collections/src/: lib.rs
crates/moof-plugin-core/: Cargo.toml
crates/moof-plugin-effects/: Cargo.toml
crates/moof-plugin-gui/: Cargo.toml
crates/moof-plugin-gui/src/: lib.rs
crates/moof-plugin-json/: Cargo.toml
crates/moof-plugin-json/src/: lib.rs
crates/moof-plugin-numeric/: Cargo.toml
crates/moof-plugin-vec3/: Cargo.toml
crates/moof-runtime/: Cargo.toml
crates/moof-runtime/src/: blobstore.rs  capability.rs  dynload.rs  lib.rs  scheduler.rs  store.rs  vat.rs
crates/moof-stdlib/: Cargo.toml
crates/moof-stdlib/src/: block.rs  collections.rs  core.rs  json.rs  lib.rs  numeric.rs  vec3.rs
crates/moof-stdlib/src/effects/: act.rs  mod.rs  result.rs  vat.rs
crates/ocaml-seed/: dune-project  moof_seed.opam
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  repl.rs
crates/substrate/: Cargo.toml  build.rs
crates/substrate/src/: compiler.rs  foreign.rs  form.rs  heap.rs  intrinsics.rs  lib.rs  main.rs  nursery.rs  opcodes.rs  protos.rs  reader.rs  sym.rs  table.rs  transporter.rs  v4_export.rs  value.rs  vm.rs  wasm.rs  world.rs
crates/substrate/tests/: compiler_primitives.rs  dispatch_outside_turn.rs  doc_alignment.rs  freeze_e2e.rs  here_e2e.rs  moof_compiler.rs  nursery_e2e.rs  phase_a_forcing_function.rs  repl_nil.rs  transporter.rs  wasm_mco.rs
crates/zig-substrate/: build.zig
docs/: README.md  addressing.md  authoring-vision.md  construction.md  core-contract-matrix.md  effects-and-vats.md  errors.md  glossary.md  infix-sublanguage.md  language.md  objectspace.md  persistence.md  protocols.md  purity.md  roadmap.md  servers.md  stdlib-at-a-glance.md  stdlib-vision.md  throughlines.md  type-system.md  types.md
docs/archive/: README.md  STDLIB-PLAN.md  SYNTHESIS.md  conventions.md  effects-and-vats.md  errors.md  foundations.md  morphic-on-vello.md  protocols.md  prototype-types.md  round-trip-gap.md  servers.md  sugar-interface.md  system.md  tell-layer.md  ui-explorations.md  wave-6-core-contract.md
docs/concepts/: addressing.md  authoring.md  blocks-and-patterns.md  canvas-and-input.md  capabilities.md  compiled-objects.md  data-sources.md  definitions.md  effects.md  (+37 more)
examples/: bundle-demo.moof  conway.moof  conway_live.moof  counter.moof  fib.moof  notebook-demo.moof  reactive-demo.moof  sieve.moof  wrap-demo.moof
examples/type-plugin/: Cargo.toml
examples/type-plugin/src/: lib.rs
lib/: STDLIB.md  act.moof  bootstrap.moof  builder.moof  callable.moof  classes.moof  collections.moof  comparable.moof  compiler.moof  core.moof  error.moof  geometry.moof  hashable.moof  identity.moof  indexable.moof  inspect.moof  iterable.moof  json.moof  main.moof  mcos.moof  mcp.moof  membrane.moof  modules.moof  numeric.moof  option.moof  pattern.moof  protocols.moof  query.moof  range.moof  repl-init.moof  server.moof  set.moof  showable.moof  stream.moof  system.moof  test.moof  types.moof
moof-fabric/: Cargo.toml
moof-lang/: Cargo.toml
moof-server/: Cargo.toml
plans/: next-steps.md  wave-6-triage.md
scripts/: export-modules.moof  moof-eval.sh
src/: builtins.rs  compiler.rs  dispatch.rs  foreign.rs  form.rs  heap.rs  lib.rs  main.rs  manifest.rs  object.rs  opcodes.rs  print.rs  protos.rs  reader.rs  runtime.rs  scheduler.rs  store.rs  sym.rs  value.rs  vat.rs  vm.rs  world.rs
tests/: core.moof  definitions.moof
(+333 files in other folders)
