[workspace]
resolver = "2"
members = [
    "crates/moof-core",
    "crates/moof-lang",
    "crates/moof-runtime",
    "crates/moof-cli",
]
# Example plugins are separate workspaces (they depend on the published
# versions of moof-core etc) and intentionally not workspace members.
exclude = [
    "examples/rust-plugin",
    "examples/type-plugin",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2024"
license = "MIT"
