[workspace]
resolver = "2"
members = [
    "crates/moof-core",
    "crates/moof-lang",
    "crates/moof-runtime",
    "crates/moof-cli",

    # type plugins — each is a cdylib loaded at runtime
    "crates/moof-plugin-core",
    "crates/moof-plugin-numeric",
    "crates/moof-plugin-collections",
    "crates/moof-plugin-effects",
    "crates/moof-plugin-block",
    "crates/moof-plugin-json",
    "crates/moof-plugin-vec3",
    "crates/moof-plugin-gui",

    # capability plugins — each is a cdylib loaded at runtime
    "crates/moof-cap-console",
    "crates/moof-cap-clock",
    "crates/moof-cap-file",
    "crates/moof-cap-random",
    "crates/moof-cap-system",
    "crates/moof-cap-eval",
]
# Example plugins are separate workspaces (they depend on published
# versions of moof-core, not the in-tree paths) — kept out.
exclude = [
    "examples/rust-plugin",
    "examples/type-plugin",
]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2024"
license = "MIT"
