[workspace]
resolver = "2"
members = [
    "crates/abi",
    "crates/abi-rust",
    "crates/mco-pack",
    "players/rust",
]

[workspace.package]
version = "0.4.0-alpha.0"
edition = "2021"
authors = ["shreyan jain"]
description = "moof — a moldable, persistent, multi-actor environment"

[workspace.dependencies]
indexmap = "2"
libloading = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
