[package]
name = "moof-fabric"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "the moof objectspace substrate: objects, messaging, persistence"

[dependencies]
heed = "0.22"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tempfile = "3"
smallvec = { version = "1", features = ["serde"] }
