[package]
name = "moof-cap-console"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof built-in capability: console (stdin/stdout)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moof-core = { path = "../moof-core" }
moof-runtime = { path = "../moof-runtime" }
