[package]
name = "moof-cap-file"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof built-in capability: file system access"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moof-core = { path = "../moof-core" }
moof-runtime = { path = "../moof-runtime" }
