[package]
name = "moof-cap-random"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof built-in capability: random (xorshift64)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moof-core = { path = "../moof-core" }
moof-runtime = { path = "../moof-runtime" }
