[package]
name = "moof-cap-system"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof built-in capability: system (introspection of vats, caps, grants)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moof-core = { path = "../moof-core" }
moof-runtime = { path = "../moof-runtime" }
