[package]
name = "moof-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof language: lexer, parser, compiler, bytecode opcodes, VM"

[lib]
crate-type = ["lib"]

[dependencies]
moof-core = { path = "../moof-core" }
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
