[package]
name = "moof-plugin-collections"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof built-in type plugin: collections"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moof-core = { path = "../moof-core" }
indexmap = { version = "2", features = ["serde"] }
