[package]
name = "moof-plugin-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof built-in type plugin: gui (eframe notebook)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moof-core = { path = "../moof-core" }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
