[package]
name = "moof-plugin-json"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "moof built-in type plugin: json"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moof-core = { path = "../moof-core" }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
