[package]
name = "moof-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "built-in type plugins for moof: core, numeric, collections, effects, block, json, vec3"

[lib]
crate-type = ["lib"]

[dependencies]
moof-core = { path = "../moof-core" }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
