[package]
name = "moof-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "the moof interactive surface: repl, inspector, mcp"

[dependencies]
moof-fabric = { path = "../fabric" }
moof-lang = { path = "../lang" }
rustyline = "15"
ratatui = "0.29"
crossterm = "0.28"
